CSS for header and footer with correct alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,89 @@
-.body {
+body {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding-top: 60px;
+    padding-bottom: 40px;
+    margin: 0 auto;
+}
+
+.main-content {
     width: 960px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .header {
-    overflow: hidden;
+    width: 100%;
+    position: fixed;
+    background: #ffffff;
+    padding-top: 10px;
+    border-bottom-color: #cccccc;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    top: 0;
+}
+
+.inside-header {
     width: 960px;
     margin: auto;
-}
-.footer{
-    width: 100%;
-    margin: auto;
+    background-color: #ffffff;
     text-align: center;
 }
 
 .top-left {
     float: left;
     background-color: #4aaaa5;
+    padding: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: inline-block;
+    vertical-align: middle;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 .top-right {
     float: right;
+    padding: 20px;
+    display: inline-block;
+    vertical-align: middle;
     font-family: 'Georgia', Times, Times New Roman, serif;
+
+}
+
+.top-right a {
+    color: grey;
+}
+
+.top-right a:link {
+    text-decoration: none;
+}
+
+.top-right a:visited {
+    text-decoration: none;
+}
+
+a.center-header {
+    border-right: solid;
+    border-right-width: 1px;
+    border-right-color: grey;
+    padding-right: 4px;
+    border-left: solid;
+    border-left-width: 1px;
+    border-left-color: grey;
+    padding-left: 4px;
+}
+
+.footer {
+    width: 100%;
+
+    margin: auto;
+    bottom: 0;
+    text-align: center;
+    position: absolute;
+    line-height: 50px;
+    color: white;
+    font-size: 10%;
+    height: 50px;
+    background-color: #666666;
+    border-top-color: #4aaaa5;
+    border-top-width: 10px;
+    border-top-style: solid;
 }
